auto comit lolz